--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
             <a class="nav-link js-scroll-trigger" href="#services">Themes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Posts</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#miscellaneous">Other</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -100,16 +103,16 @@
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-wave-square fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading"> Rhythms of the brain </h4>
-          <p class="text-muted">   .</p>
+          <h4 class="service-heading"> </h4>
+          <p class="text-muted">   </p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-brain fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Psychology and Neuroscience</h4>
-          <p class="text-muted"> How do we prioritise information that is relevant at the present moment? How do we plan actions to optimise behaviour?</p>
+          <h4 class="service-heading">Neuroscience and Cognitive Science</h4>
+          <p class="text-muted"> How do we prioritise information that is relevant at the present moment? How do we plan actions to optimise behaviour? What and how can neural data inform us about processes underlying behaviour? </p>
         </div>
       </div>
     </div>
@@ -122,7 +125,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Projects</h2>
+            <h2 class="section-heading text-uppercase">Posts</h2>
             <h3 class="section-subheading text-muted">Overview of projects</h3>
           </div>
         </div>
@@ -345,6 +348,19 @@
       </div>
     </div>
   </section>
+
+    <!-- About -->
+    <section class="page-section" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Contact</h2>
+            <h3 style="color:white;"> jasper.hajonidesvandermeulen[at]new.ox.ac.uk </h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
   <!-- Footer -->
   <footer class="footer">
